force-app/main/default/objects/ucinn_ascendv2__Matching_Gift_Origination__c/ucinn_ascendv2__Matching_Gift_Origination__c.object-meta.xml
<CustomObject>
    <description>The pledges/gifts/payments that created/triggered/originated the matching gifts.</description>
    <label>Matching Gift Origination</label>
    <nameField>
        <label>Matching Gift Origination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matching Gift Originations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>