force-app/main/default/objects/ucinn_ascendv2__Matching_Gift_Origination__c/fields/ucinn_ascendv2__Matching_Gift_Origin_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Gift_Origin_Name_Auto_Number__c</fullName>
    <displayFormat>MGO-{0000000}</displayFormat>
    <label>Matching Gift Origin Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>