force-app/main/default/objects/ucinn_ascendv2__Matching_Gift_Origination__c/fields/ucinn_ascendv2__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Opportunity__c</fullName>
    <description>The matching gift opportunity that was created as a result of the source payment</description>
    <inlineHelpText>The matching gift opportunity that was created as a result of the source payment</inlineHelpText>
    <label>Pledge / Gift</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Matching Gift Originations</relationshipLabel>
    <relationshipName>Matching_Gift_Originations_Opportunity</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>