force-app/main/default/objects/ucinn_ascendv2__Matching_Gift_Origination__c/fields/ucinn_ascendv2__Payment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment__c</fullName>
    <description>The source payment that caused the matching gift.</description>
    <inlineHelpText>The source payment that caused the matching gift.</inlineHelpText>
    <label>Payment</label>
    <referenceTo>ucinn_ascendv2__Payment__c</referenceTo>
    <relationshipLabel>Matching Gift Originations</relationshipLabel>
    <relationshipName>Matching_Gift_Originations_Payment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>